--- a/css/post-styles.css
+++ b/css/post-styles.css
@@ -8,7 +8,7 @@
 }
 
 .post h2{
-  font-family: var(--font-uncial);
+  font-family: var(--font-serif);
   font-size: 36px;
   font-weight: 400;
   line-height: 1.3;
@@ -20,7 +20,7 @@
 }
 
 .post h3{
-  font-family: var(--font-uncial);
+  font-family: var(--font-serif);
   font-size: 26px;
   font-weight: 400;
   line-height: 1.3;
